# s2sGeoAdapter

./: .gitignore  CMakeLists.txt  DELIVERY.md  FILES.md  PROJECT_SUMMARY.txt  README.md  build.sh  conanfile.txt
docs/: ARCHITECTURE.md  INDEX.md  QUICKSTART.md  SYSTEM_DESIGN.md
include/: CommandDispatcher.hpp  ContextInjector.hpp  CyclingContextProvider.hpp  DatingContextProvider.hpp  GeminiIntegration.hpp  IGeoProvider.hpp  IPCManager.hpp  IPCReader.hpp  IPCWriter.hpp  KalmanFilter.hpp  LocationService.hpp  PluginRegistry.hpp  S2GeometryWrapper.hpp  S2SClient.hpp  SensorManager.hpp  SharedMemoryStructs.hpp  WebSocketManager.hpp  WorldState.hpp
src/adapter/: ContextInjector.cpp  GeminiIntegration.cpp  S2SClient.cpp  WebSocketManager.cpp  main.cpp
src/core/: CyclingContextProvider.cpp  DatingContextProvider.cpp  IPCReader.cpp  IPCWriter.cpp  KalmanFilter.cpp  LocationDataTypes.cpp  PluginRegistry.cpp  S2GeometryWrapper.cpp  SharedMemoryManager.cpp  StepDetector.cpp  WorldState.cpp
src/daemon/: CommandDispatcher.cpp  LocationService.cpp  SensorManager.cpp  main.cpp
tests/: TestIPC.cpp  TestKalmanFilter.cpp  TestS2Geometry.cpp
